# cv

./: .env.template  .gitignore  .pre-commit-config.yaml  .stylelintrc.json  AGENTS.md  Cargo.toml  Dioxus.toml  README.md  setup.sh
assets/: tailwind.css
assets/styling/: blog.css  echo.css  main.css  navbar.css
src/: lib.rs  main.rs
src/components/: about_section.rs  blog_post_card.rs  github_card.rs  info_field.rs  introduction.rs  linkedin_card.rs  loading_spinner.rs  login_button.rs  login_card.rs  logo.rs  mod.rs  nav_item.rs  profile_header.rs  profile_image.rs  section_card.rs  section_header.rs  social_link.rs  social_links.rs  user_profile_card.rs
src/models/: mod.rs
src/views/: blog.rs  callback.rs  forum.rs  home.rs  members.rs  mod.rs  navbar.rs  profile.rs
tests/: auth_tests.rs  component_tests.rs  error_handling_tests.rs  github_tests.rs  integration_tests.rs  model_tests.rs  route_tests.rs  server_functions_tests.rs  view_tests.rs
